adiciona requisito 14 Crie campo de entrada para avaliar

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
 				<section>
 					<div class="item-flex-input-radio">
 						<label id="label-family" for="">Qual sua família?</label><br>
-						<input  id="fro" type="radio" name="family" value="Frontend">
+						<input id="fro" type="radio" name="family" value="Frontend">
 						<label for="fro">Frontend</label><br>
+
 						<input id="back" type="radio" name="family" value="Backend">
 						<label for="back">Backend</label><br>
+
 						<input id="full" type="radio" name="family" value="FullStack">
 						<label for="full">FullStack</label><br>
 					</div>
@@ -65,6 +67,32 @@
 					</div>
 				</section>
 			</div>
+			<section>
+				<div>
+					<label id="label-rate" for="">Como você avalia a Trybewarts?</label>
+
+					<input id="um" type="radio" name="rate" value="1">
+					<label for="um">1</label>
+					<input id="dois" type="radio" name="rate" value="2">
+					<label for="dois">2</label>
+					<input id="tres" type="radio" name="rate" value="3">
+					<label for="tres">3</label>
+					<input id="quatro" type="radio" name="rate" value="4">
+					<label for="quatro">4</label>
+					<input id="cinco" type="radio" name="rate" value="5">
+					<label for="cinco">5</label>
+					<input id="seis" type="radio" name="rate" value="6">
+					<label for="seis">6</label>
+					<input id="sete" type="radio" name="rate" value="7">
+					<label for="sete">7</label>
+					<input id="oito" type="radio" name="rate" value="8">
+					<label for="oito">8</label>
+					<input id="nove" type="radio" name="rate" value="9">
+					<label for="nove">9</label>
+					<input id="dez" type="radio" name="rate" value="10">
+					<label for="dez">10</label>
+				</div>
+			</section>
 		</form>
 		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="imagem da da trybewarts">
 	</main>
