adiciona requisito 15  Crie uma textarea com o id 'textarea'

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 					<input id="dez" type="radio" name="rate" value="10">
 					<label for="dez">10</label>
 				</div>
+				<label class="textarea" for="label-textarea">Deixe seu comentário:</label>
+				<textarea name="" id="label-textarea" cols="64" rows="10" maxlength="500"></textarea>
 			</section>
 		</form>
 		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="imagem da da trybewarts">
