--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
 					<input id="dez" type="radio" name="rate" value="10">
 					<label for="dez">10</label>
 				</div>
-				<label class="textarea" for="label-textarea">Deixe seu comentário:</label>
-				<textarea name="" id="label-textarea" cols="64" rows="10" maxlength="500"></textarea>
+				<label class="textarea" for="label-textarea">Deixe seu comentário:</label><br>
+				<textarea name="" id="label-textarea" cols="64" rows="10" maxlength="500"></textarea><br>
+				<label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
+				<input id="agreement" type="checkbox">
 			</section>
 		</form>
 		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="imagem da da trybewarts">
