adiciona requisito 17 cria um botão de Enviar para submeter o formulário

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 				<label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
 				<input id="agreement" type="checkbox">
 			</section>
+			<button id="submit-btn" type="submit">Enviar</button>
 		</form>
 		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="imagem da da trybewarts">
 	</main>
