--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<label class="textarea" for="label-textarea">Deixe seu comentário:</label><br>
 				<textarea name="" id="label-textarea" cols="64" rows="10" maxlength="500"></textarea><br>
 				<label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
-				<input id="agreement" type="checkbox">
+				<input id="agreement" type="checkbox" required>
 			</section>
 			<button id="submit-btn" type="submit">Enviar</button>
 		</form>
