adiciona requisito 19 Crie um rodapé no final da página

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 		</form>
 		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="imagem da da trybewarts">
 	</main>
+	<footer>Direitos reservados à Trybewarts©</footer>
 	<script src="script.js"></script>
 </body>
 
