--- a/index.html
+++ b/index.html
@@ -96,14 +96,16 @@
       </label>
       <div>
         <label for="agreement" id="label-infos"> Você concorda com o uso das informações acima? </label>
-        <input type="checkbox" name="" id="agreement">
+        <input type="checkbox" id="agreement">
       </div>
-      <button type="submit" id="submit-btn">Enviar</button>
+      <button type="submit" id="submit-btn" disabled>Enviar</button>
     </form>
     <aside>
       <img src="images/trybewarts-colored.svg" alt="Trybewarts form logo" id="trybewarts-forms-logo">
     </aside>
   </main>
+  <footer>
+    <p>Direitos reservados à Trybewarts©</p>
+   </footer>
 </body>
-
 </html>
