--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
         </div>
       </div>
       <hr>
-      <section id="labelRate">
-        <label for="" id="label-rate">
-          <p>Como você avalia a Trybewarts?</p>
-        </label>
+      <div class="row">
+        <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
         <input type="radio" name="rate" value="1">1
         <input type="radio" name="rate" value="2">2
         <input type="radio" name="rate" value="3">3
@@ -89,13 +87,11 @@
         <input type="radio" name="rate" value="8">8
         <input type="radio" name="rate" value="9">9
         <input type="radio" name="rate" value="10">10
-      </section>
-      <label for="textarea" class="textarea">
-        <p>Deixe seu comentário:</p>
-        <textarea name="textarea" id="textarea" cols="30" rows="3" maxlength="500"></textarea>
-      </label>
+      </div>
+      <label for="textarea" class="textarea">Deixe seu comentário:</label>
+      <textarea name="textarea" id="textarea" cols="30" rows="3" maxlength="500"></textarea>
       <div>
-        <label for="agreement" id="label-infos"> Você concorda com o uso das informações acima? </label>
+        <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
         <input type="checkbox" id="agreement">
       </div>
       <button type="submit" id="submit-btn" disabled>Enviar</button>
