--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
         <hr>
         <section class="opniao">
           <div class="rate-radio">
-          <label for="rate" id="label-rate">Como você avalia a Trybewarts?</label>
-          <input name="rate" type="radio" value="1">1
-          <input name="rate" type="radio" value="2">2
-          <input name="rate" type="radio" value="3">3
-          <input name="rate" type="radio" value="4">4
-          <input name="rate" type="radio" value="5">5
-          <input name="rate" type="radio" value="6">6
-          <input name="rate" type="radio" value="7">7
-          <input name="rate" type="radio" value="8">8
-          <input name="rate" type="radio" value="9">9
-          <input name="rate" type="radio" value="10">10 
-        </div> 
-        <div class="comentarios"> 
-          <label class="textarea">Deixe seu comentário:</label>
-          <textarea id="textarea" maxlength="500"></textarea>          
-        </div>    
-         
+            <label for="rate" id="label-rate">Como você avalia a Trybewarts?</label>
+            <input name="rate" type="radio" value="1"><labe>1</labe>
+            <input name="rate" type="radio" value="2"><labe>2</labe>
+            <input name="rate" type="radio" value="3"><labe>3</labe>
+            <input name="rate" type="radio" value="4"><labe>4</labe>
+            <input name="rate" type="radio" value="5"><labe>5</labe>
+            <input name="rate" type="radio" value="6"><labe>6</labe>
+            <input name="rate" type="radio" value="7"><labe>7</labe>
+            <input name="rate" type="radio" value="8"><labe>8</labe>
+            <input name="rate" type="radio" value="9"><labe>9</labe>
+            <input name="rate" type="radio" value="10"><labe>10</labe>
+          </div>
+          <div class="comentarios">
+            <label class="textarea">Deixe seu comentário:</label>
+            <textarea id="textarea" maxlength="500"></textarea>
+          </div>
+
 
         </section>
     </form>
