--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <button id='input-button' type='submit'>Entrar</button>
     </form>
   </header>
+
   <main class="corpo">
     <form id="evaluation-form">
       <h2>Forms</h1>
@@ -55,25 +56,29 @@
         <hr>
         <section class="opniao">
           <div class="rate-radio">
-          <label for="rate" id="label-rate">Como você avalia a Trybewarts?</label>
-          <input name="rate" type="radio" value="1">1
-          <input name="rate" type="radio" value="2">2
-          <input name="rate" type="radio" value="3">3
-          <input name="rate" type="radio" value="4">4
-          <input name="rate" type="radio" value="5">5
-          <input name="rate" type="radio" value="6">6
-          <input name="rate" type="radio" value="7">7
-          <input name="rate" type="radio" value="8">8
-          <input name="rate" type="radio" value="9">9
-          <input name="rate" type="radio" value="10">10 
-        </div> 
-        <div class="comentarios"> 
-          <label class="textarea">Deixe seu comentário:</label>
-          <textarea id="textarea" maxlength="500"></textarea>          
-        </div>    
-         
-
+            <label for="rate" id="label-rate">Como você avalia a Trybewarts?</label>
+            <input name="rate" type="radio" value="1">1
+            <input name="rate" type="radio" value="2">2
+            <input name="rate" type="radio" value="3">3
+            <input name="rate" type="radio" value="4">4
+            <input name="rate" type="radio" value="5">5
+            <input name="rate" type="radio" value="6">6
+            <input name="rate" type="radio" value="7">7
+            <input name="rate" type="radio" value="8">8
+            <input name="rate" type="radio" value="9">9
+            <input name="rate" type="radio" value="10">10
+          </div>
+          <div class="comentarios">
+            <label class="textarea">Deixe seu comentário:</label>
+            <textarea id="textarea" maxlength="500"></textarea>
+          </div>
         </section>
+
+        <section>
+          <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
+          <input type="checkbox" name="" id="agreement">
+        </section>
+
     </form>
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
   </main>
