--- a/index.html
+++ b/index.html
@@ -57,16 +57,26 @@
         <section class="opniao">
           <div class="rate-radio">
             <label for="rate" id="label-rate">Como você avalia a Trybewarts?</label>
-            <input name="rate" type="radio" value="1"><labe>1</labe>
-            <input name="rate" type="radio" value="2"><labe>2</labe>
-            <input name="rate" type="radio" value="3"><labe>3</labe>
-            <input name="rate" type="radio" value="4"><labe>4</labe>
-            <input name="rate" type="radio" value="5"><labe>5</labe>
-            <input name="rate" type="radio" value="6"><labe>6</labe>
-            <input name="rate" type="radio" value="7"><labe>7</labe>
-            <input name="rate" type="radio" value="8"><labe>8</labe>
-            <input name="rate" type="radio" value="9"><labe>9</labe>
-            <input name="rate" type="radio" value="10"><labe>10</labe>
+            <input name="rate" type="radio" value="1">
+            <labe>1</labe>
+            <input name="rate" type="radio" value="2">
+            <labe>2</labe>
+            <input name="rate" type="radio" value="3">
+            <labe>3</labe>
+            <input name="rate" type="radio" value="4">
+            <labe>4</labe>
+            <input name="rate" type="radio" value="5">
+            <labe>5</labe>
+            <input name="rate" type="radio" value="6">
+            <labe>6</labe>
+            <input name="rate" type="radio" value="7">
+            <labe>7</labe>
+            <input name="rate" type="radio" value="8">
+            <labe>8</labe>
+            <input name="rate" type="radio" value="9">
+            <labe>9</labe>
+            <input name="rate" type="radio" value="10">
+            <labe>10</labe>
           </div>
           <div class="comentarios">
             <label class="textarea">Deixe seu comentário:</label>
@@ -79,7 +89,9 @@
           <input type="checkbox" name="" id="agreement">
         </section>
 
+        <button type='submit' id='submit-btn'>Enviar</button>
     </form>
+
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
   </main>
   <script src="script.js"></script>
