--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 
         <section>
           <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
-          <input type="checkbox" name="" id="agreement">
+          <input type="checkbox" name="" id="agreement" required>
         </section>
 
-        <button type='submit' id='submit-btn'>Enviar</button>
+        <button type='submit' id='submit-btn' disabled>Enviar</button>
     </form>
 
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
