--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
       <input type="checkbox" value="SQL" class="subject">SQL
       <input type="checkbox" value="Python" class="subject">Python
     </div>
-
+<label for="textarea" class="textarea"> Deixe seu comentário: </label> 
+<textarea id="textarea" cols="10"  rows="10" maxlength= "500"> </textarea>
+<label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
+<input type="checkbox" id="agreement"> 
     </form>
 
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
