--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
 
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
   </main>
+
+  <footer>
+    <strong>
+      Direitos reservados à Trybewarts©
+    </strong>
+  </footer>
   <script src="script.js"></script>
 </body>
 
