tentativas em vao

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -55,15 +55,16 @@
       <input type="checkbox" value="Python" class="subject">Python
     </div>
 <label for="textarea" class="textarea"> Deixe seu comentário: </label> 
-<textarea id="textarea" cols="10"  rows="10" maxlength= "500"> </textarea>
+<textarea id="textarea" cols="10"  rows="10" maxlength="500"> </textarea>
 <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
 <input type="checkbox" id="agreement"> 
+<button id="submit-btn" type="submit" disabled>Enviar</button>
     </form>
 
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
   </main>
 
-
+<footer>
 </body>
 <script src="script.js"></script>
 
