--- a/index.html
+++ b/index.html
@@ -30,22 +30,28 @@
             </div>
             <div class="mb-3">
                 <input placeholder="Email" id="input-email" type="email">
-            <div>
-                <label>Casa:</label>
-                <select aria-label="Default select example" name="" id="house">
-                    <option id="house">House</option>
-                    <option id="gitnoria-house">Gitnória</option>
-                    <option id="reactpuff-house">Reactpuff</option>
-                    <option id="corvinode-house">Corvinode</option>
-                    <option id="pytherina-house">Pytherina</option>
-                </select>
-            </div>
+                <div>
+                    <label>Casa:</label>
+                    <select aria-label="Default select example" name="" id="house">
+                        <option id="house">House</option>
+                        <option id="gitnoria-house">Gitnória</option>
+                        <option id="reactpuff-house">Reactpuff</option>
+                        <option id="corvinode-house">Corvinode</option>
+                        <option id="pytherina-house">Pytherina</option>
+                    </select>
+                </div>
             </div>
         </form>
         <div>
             <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
         </div>
     </main>
+    <label id="label-family">
+        Qual sua família?
+        <input type="radio" name="family" value="Frontend">Frontend
+        <input type="radio" name="family" value="Backend">Backend
+        <input type="radio" name="family" value="FullStack">Fullstack
+    </label>
     <script src="script.js"></script>
 </body>
 
