c2 - Adiciona logotipo, img, na barra superior

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
   <header class="header">
+    <div><img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo-trybe"></div>
     <nav></nav>
   </header>
 
