--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My TrybeWarts</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,6 +18,21 @@
     <nav></nav>
   </header>
 
+  <main>
+
+    <section>
+
+      <form action="GET" class="trybewarts-login">
+
+        <input type="email" name="usuario" id="login" placeholder="Login">
+        <input type="password" name="senha" id="senha" placeholder="Senha">
+        <button type="submit">Enviar</button>
+
+      </form>
+
+    </section>
+
+  </main>
 
   <script src="script.js"></script>
 </body>
