--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <input type="email" name="usuario" id="login" placeholder="Login">
         <input type="password" name="senha" id="senha" placeholder="Senha">
-        <button type="submit">Enviar</button>
+        <button type="submit" id="button">Enviar</button>
 
       </form>
 
