c4 - Adiciona titulo "Trybewarts" centralizado dentro do "Header"

--- a/index.html
+++ b/index.html
@@ -15,13 +15,8 @@
 
   <header class="header">
     <div><img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo-trybe"></div>
-    <nav></nav>
-  </header>
-
-  <main>
-
-    <section>
-
+    <h1 id="trybewarts-header-title">Trybewarts</h1>
+    <div>
       <form action="GET" class="trybewarts-login">
 
         <input type="email" name="usuario" id="login" placeholder="Login">
@@ -29,6 +24,13 @@
         <button type="submit" id="button">Enviar</button>
 
       </form>
+    </div>
+  </header>
+
+  <main>
+
+    <section>
+
 
     </section>
 
