c7 - Adiciona o logo da Trybewarts ao lado do forms no body.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
     <form action="GET" id="evaluation-form"></form>
 
+    <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="Imagem-da-TrybeWarts">
+
   </main>
 
   <script src="script.js"></script>
