c8 - Adiciona ao 3 inputs no forms do body

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 
   <main>
 
-    <form action="GET" id="evaluation-form"></form>
+    <form action="GET" id="evaluation-form">
+      <input type="text" name="nome" id="input-name" placeholder="Nome">
+      <input type="text" name="sobrenome" id="input-lastname" placeholder="Sobrenome">
+      <input type="emai" name="email" id="input-email" placeholder="Email">
+    </form>
 
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="Imagem-da-TrybeWarts">
 
