c9 - Adiciona um select ao forms do body e um pouco de estilo no css em relaçao ao header.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
 <body>
 
   <header class="header">
-    <div><img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo-trybe"></div>
+    <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo-trybe">
     <h1 id="trybewarts-header-title">Trybewarts</h1>
-    <div>
-      <form action="GET" class="trybewarts-login">
-
-        <input type="email" name="usuario" id="login" placeholder="Login">
-        <input type="password" name="senha" id="senha" placeholder="Senha">
-        <button type="submit" id="button">Enviar</button>
-
-      </form>
-    </div>
+    <form action="GET" class="trybewarts-login">
+      <input type="email" name="usuario" id="login" placeholder="Login">
+      <input type="password" name="senha" id="senha" placeholder="Senha">
+      <button type="submit" id="button">Enviar</button>
+    </form>
   </header>
 
   <main>
@@ -33,6 +29,12 @@
       <input type="text" name="nome" id="input-name" placeholder="Nome">
       <input type="text" name="sobrenome" id="input-lastname" placeholder="Sobrenome">
       <input type="emai" name="email" id="input-email" placeholder="Email">
+      <select name="casa" id="house">
+        <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+        <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+        <option value="Corvinode" id="corvinode-house">Corvinode</option>
+        <option value="Pytherina" id="pytherina-house">Pytherina</option>
+      </select>
     </form>
 
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="Imagem-da-TrybeWarts">
