--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo-trybe">
     <h1 id="trybewarts-header-title">Trybewarts</h1>
     <form action="GET" class="trybewarts-login">
-      <input type="email" name="usuario" id="login" placeholder="Login">
-      <input type="password" name="senha" id="senha" placeholder="Senha">
+      <input type="email" name="usuario" id="login" class="form-control" placeholder="Login">
+      <input type="password" name="senha" id="senha" class="form-control" placeholder="Senha">
       <button type="submit" id="button">Enviar</button>
     </form>
   </header>
@@ -26,15 +26,23 @@
   <main>
 
     <form action="GET" id="evaluation-form">
-      <input type="text" name="nome" id="input-name" placeholder="Nome">
-      <input type="text" name="sobrenome" id="input-lastname" placeholder="Sobrenome">
-      <input type="emai" name="email" id="input-email" placeholder="Email">
-      <select name="casa" id="house">
-        <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-        <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-        <option value="Corvinode" id="corvinode-house">Corvinode</option>
-        <option value="Pytherina" id="pytherina-house">Pytherina</option>
-      </select>
+      <div class="row g-2">
+        <div class="col-auto">
+          <input type="text" class="form-control" name="nome" id="input-name" placeholder="Nome">
+        </div>
+        <div class="col-auto">
+          <input type="text" class="form-control" name="sobrenome" id="input-lastname" placeholder="Sobrenome">
+        </div>
+      </div>
+      <div class="col-auto">
+        <input type="emai" name="email" id="input-email" class="form-control" placeholder="Email">
+        <select name="casa" id="house">
+          <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+          <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+          <option value="Corvinode" id="corvinode-house">Corvinode</option>
+          <option value="Pytherina" id="pytherina-house">Pytherina</option>
+        </select>
+      </div>
     </form>
 
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="Imagem-da-TrybeWarts">
