c10 - Deixa o campo 'Email' e 'Casas' na mesma linha.

--- a/index.html
+++ b/index.html
@@ -34,14 +34,18 @@
           <input type="text" class="form-control" name="sobrenome" id="input-lastname" placeholder="Sobrenome">
         </div>
       </div>
-      <div class="col-auto">
-        <input type="emai" name="email" id="input-email" class="form-control" placeholder="Email">
-        <select name="casa" id="house">
-          <option value="Gitnória" id="gitnoria-house">Gitnória</option>
-          <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
-          <option value="Corvinode" id="corvinode-house">Corvinode</option>
-          <option value="Pytherina" id="pytherina-house">Pytherina</option>
-        </select>
+      <div class="row g-2">
+        <div class="col-auto">
+          <input type="emai" name="email" id="input-email" class="form-control" placeholder="Email">
+        </div>
+        <div class="col-auto">
+          <select name="casa" id="house">
+            <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+            <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+            <option value="Corvinode" id="corvinode-house">Corvinode</option>
+            <option value="Pytherina" id="pytherina-house">Pytherina</option>
+          </select>
+        </div>
       </div>
     </form>
 
