Muda estilo do header no css

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 <body>
 
-  <header class="header">
+  <header class="header d-flex justify-content-between align-items-center p-2">
     <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo-trybe">
     <h1 id="trybewarts-header-title">Trybewarts</h1>
     <form action="GET" class="trybewarts-login">
-      <input type="email" name="usuario" id="login" class="form-control" placeholder="Login">
-      <input type="password" name="senha" id="senha" class="form-control" placeholder="Senha">
-      <button type="submit" id="button">Enviar</button>
+      <input type="email" name="usuario" id="login" class="form-control me-1" placeholder="Login">
+      <input type="password" name="senha" id="senha" class="form-control me-1" placeholder="Senha">
+      <button type="submit" id="button" class="btn btn-primary purpler">Enviar</button>
     </form>
   </header>
 
