--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           <div class="comentarios">
             <label class="textarea">Deixe seu comentário:</label>
             <textarea id="textarea" maxlength="500"></textarea>
+            <div id='counter'>500 caracteres restantes.</div>
           </div>
         </section>
 
