c14 - Adiciona seçao dos radios para avaliaçao.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,49 @@
         </div>
       </div>
       <hr>
+      <div class="d-flex">
+      <label for="" id="label-rate" class="me-2">Como você avalia a Trybewarts?</label>
+      <div class="form-check me-2 pe-0">
+        <input type="radio" name="rate" id="1" class="form-check-input" value="1">
+        <label for="1">1</label>
+      </div>
+      <div class="form-check me-2 pe-0">
+        <input type="radio" name="rate" id="2" class="form-check-input" value="2">
+        <label for="2">2</label>
+      </div>
+      <div class="form-check me-2 pe-0">
+        <input type="radio" name="rate" id="3" class="form-check-input" value="3">
+        <label for="3">3</label>
+      </div>
+      <div class="form-check me-2 pe-0">
+        <input type="radio" name="rate" id="4" class="form-check-input" value="4">
+        <label for="4">4</label>
+      </div>
+      <div class="form-check me-2 pe-0">
+        <input type="radio" name="rate" id="5" class="form-check-input" value="5">
+        <label for="5">5</label>
+      </div>
+      <div class="form-check me-2 pe-0">
+        <input type="radio" name="rate" id="6" class="form-check-input" value="6">
+        <label for="6">6</label>
+      </div>
+      <div class="form-check me-2 pe-0">
+        <input type="radio" name="rate" id="7" class="form-check-input" value="7">
+        <label for="7">7</label>
+      </div>
+      <div class="form-check me-2 pe-0">
+        <input type="radio" name="rate" id="8" class="form-check-input" value="8">
+        <label for="8">8</label>
+      </div>
+      <div class="form-check me-2 pe-0">
+        <input type="radio" name="rate" id="9" class="form-check-input" value="9">
+        <label for="9">9</label>
+      </div>
+      <div class="form-check me-2 pe-0">
+        <input type="radio" name="rate" id="10" class="form-check-input" value="10">
+        <label for="10">10</label>
+      </div>
+    </div>
     </form>
 
     <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="Imagem-da-TrybeWarts">
