adiciona requisito 20 contador de character

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 				</div>
 				<label class="textarea" for="label-textarea">Deixe seu comentário:</label><br>
 				<textarea name="" id="label-textarea" cols="64" rows="10" maxlength="500"></textarea><br>
+				<p id='counter'>500</p>
 				<label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
 				<input id="agreement" type="checkbox" required>
 			</section>
