renomeia id label-texarea para textearea & corrigi indentação

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 					<input id="dez" type="radio" name="rate" value="10">
 					<label for="dez">10</label>
 				</div>
-				<label class="textarea" for="label-textarea">Deixe seu comentário:</label><br>
-				<textarea name="" id="label-textarea" cols="64" rows="10" maxlength="500"></textarea><br>
+				<label class="textarea">Deixe seu comentário:</label><br>
+				<textarea id="textarea" cols="64" rows="10" maxlength="500"></textarea><br>
 				<p id='counter'>500</p>
 				<label id="label-infos" for="agreement">Você concorda com o uso das informações acima?</label>
 				<input id="agreement" type="checkbox" required>
